--- a/order.html
+++ b/order.html
@@ -28,7 +28,7 @@
 
 <body>
     <p class="right">
-        <a href="https://discord.gg/BKGapbTn"> <i class="fa fa-discord" aria-hidden="true"></i></a>
+        <a href="https://discord.gg/bTD6bcj"> <i class="fa fa-discord" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/michaelglhf/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="https://steamcommunity.com/id/steamwarspear/"><i class="fa fa-steam-square" aria-hidden="true"></i></a>
 
