--- a/order.html
+++ b/order.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> bakery </title>
+    <title> SkyBakery </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
@@ -36,7 +36,7 @@
     <header>
         <ul class="nav justify-content-left">
             <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="index.html">Home</a>
+                <a class="nav-link " aria-current="page" href="home.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
@@ -92,11 +92,11 @@
 
                     <form Name="myform">
                         <p>Jumlah yang Ingin Dibeli : </p>
-                        <input type="text" name="angka1" onfocus="color(this)" "onmouseover="style.color='blue' " onmouseout="style.color='black' ">
+                        <input type="text" name="angka1" onfocus="color(this)">
                         </br>
-                        <Input type="button " Value="Total " onClick="kali() "onfocus="color(this) ">
+                        <Input type="button" Value="Total" onClick="kali() " onfocus="color(this) ">
                         </br>
-                        <input type="text " id="add " name="hasil " value=" ""onmouseover="style.color='blue'" onmouseout="style.color='black'">
+                        <input type="text " id="add" name="hasil " value=" ">
                     </form>
                     </br>
                     </br>
