--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <title> SkyBakery </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
 
 </head>
@@ -13,24 +14,51 @@
     <a href="https://www.instagram.com/michaelglhf/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     <a href="https://steamcommunity.com/id/steamwarspear/"><i class="fa fa-steam-square" aria-hidden="true"></i></a>
 </p>
-<header>
-    <ul class="nav justify-content-left">
+
+<input type="checkbox" id="check" class="btn-check">
+
+<div class="samping">
+    <ul>
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link " aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="product.html">Product</a>
+            <a class="nav-link" href="product.html">Product</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="order.html">How to Order</a>
+            <a class="nav-link active" href="order.html">How to Order</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="contact.html">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
     </ul>
+    </input>
+</div>
+
+<header>
+    <div class="head">
+        <ul class="nav justify-content-left">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="product.html">Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="order.html">How to Order</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="contact.html">Contact Us</a>
+            </li>
+        </ul>
+    </div>
+    <label for="check" class="kecil"><i class="fas fa-bars fa-2x"></i></label>
 </header>
 
 
