--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="message">
-                    <form onsubmit="confirmInput()" action="home.html">
+                    <form onsubmit="confirmInput()" action="index.html">
                         <div class="mb-3">
                             <label for="name" class="form-label " onmouseover="style.color='blue'" onmouseout="style.color='black'">Full Name</label>
                             <input type="name" class="form-control" id="input1" placeholder=" " onfocus="myFunction(this)">
