--- a/order.html
+++ b/order.html
@@ -28,35 +28,40 @@
     }
 </script>
 
-    <p class="right">
-        <a href="https://discord.gg/bTD6bcj"> <i class="fa fa-discord" aria-hidden="true"></i></a>
-        <a href="https://www.instagram.com/michaelglhf/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a href="https://steamcommunity.com/id/steamwarspear/"><i class="fa fa-steam-square" aria-hidden="true"></i></a>
-
-    </p>
 
 
-    <header>
+<p class="right">
+    <a href="https://discord.gg/bTD6bcj"> <i class="fa fa-discord" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/michaelglhf/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+    <a href="https://steamcommunity.com/id/steamwarspear/"><i class="fa fa-steam-square" aria-hidden="true"></i></a>
 
-        <ul class="nav justify-content-left">
-            <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="product.html">Product</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="order.html">How to Order</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
-        </ul>
-    </header>
- <body>
+</p>
+
+
+<header>
+
+    <ul class="nav justify-content-right">
+        <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="about.html">About Us</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="product.html">Product</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="order.html">How to Order</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
+    </ul>
+
+
+</header>
+
+<body>
     <section class="contact">
         <div class="po">
             <div class="container">
